# obuilder

./: .gitattributes  .gitignore  .run-gha-tests.sh  .run-travis-tests.sh  .travis.yml  CHANGES.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  build.ml  build.mli  config.ml  dockerfile.ml  dune  dune-project  example.macos.spec  example.ml  example.spec  example.windows.hcs.spec  example.windows.spec  index.html  macOS.md  main.ml  manifest.ml  obuilder-spec-opam.opam  obuilder-spec.opam  obuilder.opam  obuilder.opam.template  os.ml  process.ml  store.ml  store.mli  stress.sh  tar_transfer.ml  tar_transfer.mli  test.ml  windows.md
.github/workflows/: main.sh  main.yml
doc/: README.mld  freeBSD.mld  freebsd.md  index.mld  macOS.md  macOS.mld  qemu.md  windows.mld
lib/: archive_extract.ml  archive_extract.mli  btrfs_store.ml  btrfs_store.mli  build.ml  build.mli  build_log.ml  build_log.mli  config.ml  dao.ml  db.ml  db_store.ml  db_store.mli  docker.ml  docker.mli  docker_sandbox.ml  docker_sandbox.mli  docker_store.ml  docker_store.mli  dune  escape.ml  hcs.ml  hcs_fetch.ml  hcs_sandbox.ml  hcs_store.ml  log.ml  macos.ml  macos_sandbox.ml  macos_sandbox.mli  manifest.ml  manifest.mli  obuilder.ml  os.ml  os_specific_utils.freebsd.ml  os_specific_utils.linux.ml  os_specific_utils.mli  overlayfs_store.ml  overlayfs_store.mli  qemu_sandbox.ml  qemu_sandbox.mli  (+32 more)
lib_spec/: cache.ml  cache.mli  docker.ml  docker.mli  dune  obuilder_spec.ml  secret.ml  secret.mli  spec.ml  spec.mli
lib_spec_opam/: distro.ml  distro.mli  dune  obuilder_spec_opam.ml  opam.ml  opam.mli  opam_version.ml  opam_version.mli  variant.ml  variant.mli
obuilder/: README.html  freeBSD.html  index.html  macOS.html  windows.html
obuilder-spec/: index.html
obuilder-spec/Obuilder_spec/: index.html
obuilder-spec/Obuilder_spec/Cache/: index.html
obuilder-spec/Obuilder_spec/Docker/: index.html
obuilder-spec/Obuilder_spec/Secret/: index.html
obuilder-spec/Obuilder_spec__/: index.html
obuilder-spec/Obuilder_spec__/Cache/: index.html
obuilder-spec/Obuilder_spec__/Docker/: index.html
obuilder-spec/Obuilder_spec__/Spec/: index.html
obuilder-spec/Obuilder_spec__Cache/: index.html
obuilder-spec/Obuilder_spec__Docker/: index.html
obuilder-spec/Obuilder_spec__Spec/: index.html
obuilder/Obuilder/: index.html
obuilder/Obuilder/Archive_extract/: index.html
obuilder/Obuilder/Btrfs_store/: index.html
obuilder/Obuilder/Build_log/: index.html
obuilder/Obuilder/Builder/: index.html
obuilder/Obuilder/Builder/argument-1-Store/: index.html
obuilder/Obuilder/Builder/argument-2-Sandbox/: index.html
obuilder/Obuilder/Builder/argument-3-Fetch/: index.html
obuilder/Obuilder/Builder/argument-3-_/: index.html
obuilder/Obuilder/Config/: index.html
obuilder/Obuilder/Config/Mount/: index.html
obuilder/Obuilder/Config/Secret/: index.html
obuilder/Obuilder/Context/: index.html
obuilder/Obuilder/Db/: index.html
obuilder/Obuilder/Docker/: index.html
obuilder/Obuilder/Docker/Cmd/: index.html
obuilder/Obuilder/Docker/Cmd_log/: index.html
obuilder/Obuilder/Docker/Extract/: index.html
obuilder/Obuilder/Docker_builder/: index.html
obuilder/Obuilder/Docker_builder/argument-1-Store/: index.html
obuilder/Obuilder/Docker_sandbox/: index.html
obuilder/Obuilder/Docker_store/: index.html
obuilder/Obuilder/Native_sandbox/: index.html
obuilder/Obuilder/Os/: index.html
obuilder/Obuilder/Rsync_store/: index.html
obuilder/Obuilder/Runc_sandbox/: index.html
obuilder/Obuilder/S/: index.html
obuilder/Obuilder/Sandbox/: index.html
obuilder/Obuilder/Store_spec/: index.html
obuilder/Obuilder/User_temp/: index.html
obuilder/Obuilder/Xfs_store/: index.html
obuilder/Obuilder/Zfs_clone/: index.html
obuilder/Obuilder/Zfs_store/: index.html
obuilder/Obuilder/module-type-BUILDER/: index.html
obuilder/Obuilder__/: index.html
obuilder/Obuilder__/Btrfs_store/: index.html
obuilder/Obuilder__/Build_log/: index.html
obuilder/Obuilder__/Config/: index.html
obuilder/Obuilder__/Dao/: index.html
obuilder/Obuilder__/Db/: index.html
obuilder/Obuilder__/Db_store/: index.html
obuilder/Obuilder__/Escape/: index.html
obuilder/Obuilder__/Log/: index.html
obuilder/Obuilder__/Manifest/: index.html
obuilder/Obuilder__/Os/: index.html
obuilder/Obuilder__/Runc_sandbox/: index.html
obuilder/Obuilder__/S/: index.html
obuilder/Obuilder__/Store_spec/: index.html
obuilder/Obuilder__/Tar_transfer/: index.html
obuilder/Obuilder__/Zfs_store/: index.html
obuilder/Obuilder__Btrfs_store/: index.html
obuilder/Obuilder__Build/: index.html
obuilder/Obuilder__Build/Context/: index.html
obuilder/Obuilder__Build/Make/: index.html
obuilder/Obuilder__Build_log/: index.html
obuilder/Obuilder__Config/: index.html
obuilder/Obuilder__Config/Mount/: index.html
obuilder/Obuilder__Dao/: index.html
obuilder/Obuilder__Db/: index.html
obuilder/Obuilder__Db_store/: index.html
obuilder/Obuilder__Db_store/Make/: index.html
obuilder/Obuilder__Escape/: index.html
obuilder/Obuilder__Log/: index.html
obuilder/Obuilder__Manifest/: index.html
obuilder/Obuilder__Os/: index.html
obuilder/Obuilder__Runc_sandbox/: index.html
obuilder/Obuilder__S/: index.html
obuilder/Obuilder__S/module-type-BUILDER/: index.html
obuilder/Obuilder__S/module-type-SANDBOX/: index.html
obuilder/Obuilder__S/module-type-STORE/: index.html
obuilder/Obuilder__Store_spec/: index.html
obuilder/Obuilder__Tar_transfer/: index.html
obuilder/Obuilder__Zfs_store/: index.html
qemu/: Makefile  autounattend.xml  autounattend.xml.m4  busybox.yaml  disklabel  id_ed25519.pub  install.conf  install.site.m4  user-data.yaml  user-data.yaml.m4
static/: Dockerfile  extract.cmd  manifest.bash  manifest.sh
stress/: dune  stress.ml
test/: base.tar  dummy.ml  dune  log.ml  mock_exec.ml  mock_sandbox.ml  mock_sandbox.mli  mock_store.ml  mock_store.mli  test.ml  test1.spec  test_variant.ml
test/macos/: dune  macos.sh  simple.expected
test/macos/specs/: simple.macos.spec
(+15 files in other folders)
