opam-version: "2.0"
synopsis: "Run build scripts for CI"
description:
  "OBuilder takes a build script (similar to a Dockerfile) and performs the steps in it in a sandboxed environment."
maintainer: ["talex5@gmail.com"]
authors: ["talex5@gmail.com"]
license: "Apache-2.0"
homepage: "https://github.com/ocurrent/obuilder"
doc: "https://ocurrent.github.io/obuilder/"
bug-reports: "https://github.com/ocurrent/obuilder/issues"
depends: [
  "dune" {>= "3.3"}
  "lwt" {>= "5.6.1"}
  "astring"
  "fmt" {>= "0.8.9"}
  "logs"
  "docker_hub" {>= "0.2.0"}
  "cmdliner" {>= "1.1.0"}
  "tar-unix" {>= "2.0.0"}
  "yojson" {>= "1.6.0"}
  "sexplib"
  "ppx_deriving"
  "ppx_sexp_conv"
  "sha"
  "sqlite3"
  "obuilder-spec" {= version}
  "ocaml" {>= "4.10.0"}
  "alcotest-lwt" {with-test}
  "odoc" {with-doc}
]
conflicts: [
  "result" {< "1.5"}
]
available: os = "linux" | os = "freebsd"
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ocurrent/obuilder.git"
