(library
  (name obuilder)
  (public_name obuilder)
  (preprocess (pps ppx_sexp_conv))
  (libraries
    lwt
    lwt.unix
    fmt
    yojson
    tar-unix
    sexplib
    sqlite3
    astring
    logs
    sha
    obuilder-spec
    cmdliner
    docker_hub))

(rule
 (deps sandbox.runc.ml)
 (target sandbox.ml)
 (enabled_if (= %{system} linux))
 (action (copy# %{deps} %{target})))

(rule
 (deps sandbox.runj.ml)
 (target sandbox.ml)
 (enabled_if (= %{system} freebsd))
 (action (copy# %{deps} %{target})))

(rule
 (deps os_specific_utils.linux.ml)
 (target os_specific_utils.ml)
 (enabled_if (= %{system} linux))
 (action (copy# %{deps} %{target})))

(rule
 (deps os_specific_utils.freebsd.ml)
 (target os_specific_utils.ml)
 (enabled_if (= %{system} freebsd))
 (action (copy# %{deps} %{target})))
