(rule
 (deps sandbox.macos.ml)
 (target sandbox.ml)
 (enabled_if (= %{system} macosx))
 (action (copy %{deps} %{target})))

(rule
 (deps sandbox.jail.ml)
 (target sandbox.ml)
 (enabled_if (= %{system} freebsd))
 (action (copy %{deps} %{target})))

(rule
 (deps sandbox.runc.ml)
 (target sandbox.ml)
 (enabled_if (and (<> %{system} macosx) (<> %{system} freebsd)))
 (action (copy %{deps} %{target})))

(rule
 (target Static_files.ml)
 (deps
  (source_tree ../static))
 (action
  (run %{bin:ocaml-crunch} ../static --mode=plain -o %{target})))

(library
  (name obuilder)
  (public_name obuilder)
  (preprocess (pps ppx_sexp_conv))
  (flags (:standard -w -69))
  (libraries fpath lwt lwt.unix fmt yojson tar-unix sexplib sqlite3 astring logs sha obuilder-spec cmdliner extunix))
