(copy_files ../static/manifest.bash)

(executable
 (name dummy)
 (public_name dummy)
 (package obuilder)
 (modules dummy))

(test
 (name test)
 (package obuilder)
 (deps base.tar manifest.bash %{bin:dummy})
 (libraries alcotest-lwt obuilder str logs.fmt)
 (modules log mock_exec mock_sandbox mock_store test))

(dirs :standard \ test1)
